:rocket: Primer commit

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 NEXT_PUBLIC_USER_POOL_ID=
 NEXT_PUBLIC_USER_POOL_CLIENT_ID=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+
+BUCKET_NAME=
