--- a/package.json
+++ b/package.json
@@ -13,20 +13,28 @@
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/forms": "^0.5.7",
     "aws-amplify": "^6.0.27",
-    "clsx": "^2.1.0",
-    "next": "14.1.4",
+    "aws-sdk": "^2.1651.0",
+    "axios": "^1.7.2",
+    "clsx": "^2.1.1",
+    "next": "^14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "react-player": "^2.16.0",
+    "react-router-dom": "^5.3.4",
+    "remixicon": "^4.3.0",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
