--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-sdk": "^2.1651.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.13",
     "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
