--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.0.27",
+    "@aws-sdk/client-dynamodb": "^3.609.0",
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/ua-parser-js": "^0.7.39",
+    "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.0.27",
     "aws-sdk": "^2.1651.0",
     "axios": "^1.7.2",
@@ -24,7 +27,9 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^5.3.4",
     "remixicon": "^4.3.0",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "ua-parser-js": "^1.0.38",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
