--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@aws-amplify/adapter-nextjs": "^1.0.27",
     "@aws-sdk/client-dynamodb": "^3.609.0",
     "@heroicons/react": "^2.1.3",
+    "@next/font": "^14.2.7",
+    "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/ua-parser-js": "^0.7.39",
     "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.0.27",
     "aws-sdk": "^2.1651.0",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.13",
+    "framer-motion": "^11.3.31",
+    "lucide-react": "^0.439.0",
     "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
@@ -27,8 +31,10 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^5.3.4",
     "remixicon": "^4.3.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^1.0.38",
+    "use-sound": "^4.0.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
