--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "aws-amplify": "^6.0.27",
     "aws-sdk": "^2.1651.0",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.31",
     "lucide-react": "^0.439.0",
     "next": "^14.1.4",
     "react": "^18",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-player": "^2.16.0",
