--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^5.3.4",
     "remixicon": "^4.3.0",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^1.0.38",
