--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.3.31",
+    "framer-motion": "^11.5.6",
     "lucide-react": "^0.439.0",
     "next": "^14.1.4",
     "react": "^18",
@@ -32,6 +32,7 @@
     "react-icons": "^5.2.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^5.3.4",
+    "react-transition-group": "^4.4.5",
     "remixicon": "^4.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
