--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.0.27",
+    "@aws-amplify/ui-react": "^6.5.2",
+    "@aws-amplify/ui-react-storage": "^3.3.6",
     "@aws-sdk/client-dynamodb": "^3.609.0",
     "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/s3-request-presigner": "^3.658.1",
@@ -19,8 +21,8 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/ua-parser-js": "^0.7.39",
     "amazon-cognito-identity-js": "^6.3.12",
-    "aws-amplify": "^6.0.27",
-    "aws-sdk": "^2.1651.0",
+    "aws-amplify": "^6.6.3",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
