--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.0.27",
+    "@aws-amplify/storage": "^6.6.9",
     "@aws-amplify/ui-react": "^6.5.2",
     "@aws-amplify/ui-react-storage": "^3.3.6",
     "@aws-sdk/client-dynamodb": "^3.609.0",
-    "@aws-sdk/client-s3": "^3.658.1",
+    "@aws-sdk/client-s3": "^3.665.0",
     "@aws-sdk/s3-request-presigner": "^3.658.1",
+    "@aws-sdk/types": "^3.664.0",
     "@heroicons/react": "^2.1.3",
     "@next/font": "^14.2.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/ua-parser-js": "^0.7.39",
     "amazon-cognito-identity-js": "^6.3.12",
-    "aws-amplify": "^6.6.3",
+    "aws-amplify": "^6.6.4",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
