--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@aws-sdk/types": "^3.664.0",
     "@heroicons/react": "^2.1.3",
     "@next/font": "^14.2.7",
+    "@nextui-org/card": "^2.0.34",
+    "@nextui-org/progress": "^2.0.34",
     "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/ua-parser-js": "^0.7.39",
