--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next/font": "^14.2.7",
     "@nextui-org/card": "^2.0.34",
     "@nextui-org/progress": "^2.0.34",
+    "@nextui-org/react": "^2.4.8",
     "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/forms": "^0.5.7",
     "@types/ua-parser-js": "^0.7.39",
