--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@aws-sdk/client-s3": "^3.665.0",
     "@aws-sdk/s3-request-presigner": "^3.658.1",
     "@aws-sdk/types": "^3.664.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@heroicons/react": "^2.1.3",
+    "@mui/material": "^6.1.3",
     "@next/font": "^14.2.7",
     "@nextui-org/card": "^2.0.34",
     "@nextui-org/progress": "^2.0.34",
@@ -42,6 +45,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^5.3.4",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.12.7",
     "remixicon": "^4.3.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
